2005-03-20 MickeM
 * Fundamental API changes (due to NRPE compatibility)
   - HandleCommand has changed
   - Inject has changed
   - Most API calls have new "return codes" (typedef:ed INT to allow for return code compiler checks)
   - A lot of the old return codes have changed
 * Preliminary NRPE support (can parse and execute incoming requests, cant return data yet, and no encryption)
 * New SimpleSocket in include/ will be used as base class for Listeners
 * A lot of rewrite to the NSC API

2005-03-19 MickeM
 * Refactored out NSCLient Listener as a separate module
 * Added initial NRPE listener module (not yet implemented only a shell)
 * Changed Module API (Inject function has new syntax)
 * Added some tokenizer function to charEx
 * Added new wrapper function to inject Command
 * Minor changes in relation to refactor work

2005-03-01 MickeM
 * Improved thread safety in Core
 + Added exception handling and logging in PDH code
 * Various fixes all over the place
 + New module for check size of files/directories
 * Changed build to Dynamic link
 * Added regular expression support for EventLog checker

2005-02-22 MickeM
 + Added documentation

2005-02-17 MickeM
 * NSClient issues fixed
 * System Tray issues fixed

2005-02-14 MickeM
 * Initial SourceForge release